# cargo-templated-examples

./: .gitignore  Cargo.toml  README.md  RELEASE.md
.github/workflows/: run-tests.yml  style-checks.yml
example-crate/: Cargo.toml  README.md
example-crate/example1/: Cargo.toml
example-crate/example1/examples/: dont_pass_all_features.rs  one.rs  one_required_feature.rs  parallel.rs  parallel_set_in_cargo.rs  pass_a_feature.rs  release_set_in_cargo.rs  two.rs  zero.rs
example-crate/example1/src/: lib.rs
example-crate/example2/: Cargo.toml
example-crate/example2/examples/: debug.rs
example-crate/example2/src/: lib.rs
example-crate/examples/: debug.rs  one.rs  one_required_feature.rs  parallel.rs  parallel_set_in_cargo.rs  release.rs  two.rs  zero.rs
example-crate/src/: lib.rs
src/: cargo_toml.rs  command_line.rs  commands.rs  lib.rs  main.rs  parsing.rs  rust_file.rs
