[features]
one = []
two = []

[package]
name = "example"
version = "0.0.0"
edition = "2024"
authors = ["Matthew Scroggs <rust@mscroggs.co.uk>",]
description = "crate for testing cargo-templated-examples"
license = "MIT"
homepage = "https://github.com/mscroggs/cargo-templated-examples"
repository = "https://github.com/mscroggs/cargo-templated-examples"
readme = "../README.md"

[dependencies]
mpi = "0.8.*"

[package.metadata.templated-examples]
NPROCESSES = ["2", "4"]
build = "debug"
